[package]
name = "awint"
# note: when bumping versions, update `rust-version` in `awint_internals/Cargo.toml` and in
# `ci.yml`, and add date to changelog
version = "0.5.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "Arbitrary width integers"
keywords = ["int", "integer", "big", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]

[dependencies]
awint_core = { version = "0.5.0", path = "../awint_core", default-features = false }
awint_dag = { version = "0.5.0", path = "../awint_dag", default-features = false, optional = true }
awint_ext = { version = "0.5.0", path = "../awint_ext", default-features = false, optional = true }
awint_macros = { version = "0.5.0", path = "../awint_macros" }

# note: running the tests requires `--all-features`
[features]
default = ["const_support", "std"]
# Turns on nightly features required for some functions to be marked `const`
const_support = ["awint_core/const_support", "awint_ext/const_support"]
# Turns on parts of the crate that require `alloc`
alloc = ["awint_ext"]
# Turns on parts of the crate that require `std`
std = ["alloc"]
# Turns on `rand` support
rand_support = ["awint_core/rand_support"]
# Turns on `serde` support
serde_support = ["awint_core/serde_support", "awint_ext/serde_support"]
# Turns on the experimental `awint_dag`. Note: this activates `std`.
dag = ["awint_dag", "std"]
