[package]
name = "awint_core"
version = "0.7.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "Core no-std and no-alloc `awint` functionality"
keywords = ["int", "integer", "big", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]

[dependencies]
awint_internals = { version = "0.7.0", path = "../awint_internals", default-features = false }
const_fn = "0.4"
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
zeroize = { version = "1.5", default-features = false, optional = true }

# for examples
[dev-dependencies]
awint = { path = "../awint" }
rand_xoshiro = "0.6"
ron = "0.7"

[features]
default = ["const_support"]
# Turns on nightly features required for many functions to be marked `const`
const_support = []
# Turns on `rand` support
rand_support = ["rand_core"]
# Turns on `serde` support
serde_support = ["serde"]
zeroize_support = ["zeroize"]
