[package]
name = "awint_core"
version = "0.16.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "Core no-std and no-alloc `awint` functionality"
keywords = ["int", "integer", "big", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]

[dependencies]
awint_internals = { version = "0.16.0", path = "../awint_internals", default-features = false }
const_fn = "0.4"
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
zeroize = { version = "1", default-features = false, optional = true }

# for examples
[dev-dependencies]
awint = { path = "../awint" }
rand_xoshiro = "0.6"
ron = "0.8"

[features]
default = []
# Turns on nightly features required for many functions to be marked `const`
const_support = ["awint_internals/const_support"]
# Turns on `rand` support
rand_support = ["rand_core"]
# Turns on `serde` support
serde_support = ["serde"]
zeroize_support = ["zeroize"]
# Only zero or one of these should be active
u8_digits = ["awint_internals/u8_digits"]
u16_digits = ["awint_internals/u16_digits"]
u32_digits = ["awint_internals/u32_digits"]
u64_digits = ["awint_internals/u64_digits"]
u128_digits = ["awint_internals/u128_digits"]
