[package]
name = "awint_dag"
version = "0.7.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "DAG `awint` functionality"
keywords = ["int", "integer", "big", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]

[dependencies]
awint_ext = { version = "0.7.0", path = "../awint_ext", default-features = false }
awint_macro_internals = { version = "0.7.0", path = "../awint_macro_internals", default-features = false }
awint_macros = { version = "0.7.0", path = "../awint_macros", default-features = false }

[dev-dependencies]
awint = { path = "../awint" }

[features]
try_support = []
debug = ["awint_macro_internals/debug"]
