[package]
name = "awint_ext"
version = "0.5.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "Externally allocating `awint` functionality"
keywords = ["int", "integer", "big", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]

[dependencies]
awint_core = { version = "0.5.0", path = "../awint_core", default-features = false }
awint_internals = { version = "0.5.0", path = "../awint_internals", default-features = false }
const_fn = "0.4"
serde = { version = "1.0", default-features = false, optional = true }

# for examples
[dev-dependencies]
awint = { path = "../awint" }
ron = "0.7"

[features]
default = ["const_support"]
# Turns on nightly features required for many functions to be marked `const`
const_support = ["awint_core/const_support"]
# Turns on `serde` support
serde_support = ["serde"]
