[package]
name = "awint_macro_internals"
version = "0.4.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AaronKutch/awint"
description = "Internal macro utilities for the `awint` system of crates"

[dependencies]
awint_core = { version = "0.4.0", path = "../awint_core", default-features = false }
awint_ext = { version = "0.4.0", path = "../awint_ext", default-features = false }

# for examples
[dev-dependencies]
awint = { path = "../awint" }
