[package]
name = "awint_macros"
version = "0.6.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/awint"
documentation = "https://docs.rs/awint"
description = "Accompanying procedural macros to `awint`"
keywords = ["macros", "int", "integer", "big", "math"]
categories = ["data-structures", "mathematics", "algorithms"]

[lib]
proc-macro = true

[dependencies]
awint_internals = { version = "0.6.0", path = "../awint_internals", default-features = false }
awint_macro_internals = { version = "0.6.0", path = "../awint_macro_internals" }

[dev-dependencies]
# for examples
awint = { path = "../awint" }
