[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# the "debug" feature enabled here is a test for the flag and the generation counters it enables
awint_macro_internals = { path = "../awint_macro_internals", features = ["debug"] }

[dev-dependencies]
awint = { path = "../awint", features = ["std", "rand_support", "serde_support", "dag", "debug"] }
rand_xoshiro = "0.6"
ron = "0.7"

[build-dependencies]
awint = { path = "../awint", default-features = false, features = ["std", "rand_support"] }
rand_xoshiro = "0.6"
