[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# the "debug" feature enabled here is a test for the flag and the generation counters it enables
awint = { path = "../awint", default-features = false, features = ["rand_support", "serde_support", "zeroize_support", "dag", "debug", "std"] }

[dev-dependencies]
# enable all other features here so that building on stable works
awint = { path = "../awint", default-features = false, features = ["rand_support", "serde_support", "zeroize_support", "dag", "debug", "std", "try_support"] }
rand_xoshiro = "0.6"
ron = "0.8"
zeroize = { version = "1.6", default-features = false }

[build-dependencies]
awint = { path = "../awint", default-features = false, features = ["std", "rand_support"] }
rand_xoshiro = "0.6"
